tests/011_svc_funtional/00_namespaces.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: www

---

apiVersion: v1
kind: Namespace
metadata:
  name: client-apps

---

apiVersion: v1
kind: Namespace
metadata:
  name: admin-apps

---
