tests/011_svc_funtional/01_certs.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXVENDQWtHZ0F3SUJBZ0lVQzRBcit2Y2VXa3grOWVsMk9hSFVSNXArNXJRd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1BERUxNQWtHQTFVRUJoTUNSVk14RURBT0JnTlZCQW9NQjFwbGRtVnVaWFF4R3pBWkJnTlZCQU1NRW5WdwpiRzloWkM1NlpYWmxibVYwTG1OdmJUQWVGdzB5TURBNU1qUXhNVFU0TVRKYUZ3MHlNVEE1TWpReE1UVTRNVEphCk1Ed3hDekFKQmdOVkJBWVRBa1ZUTVJBd0RnWURWUVFLREFkYVpYWmxibVYwTVJzd0dRWURWUVFEREJKMWNHeHYKWVdRdWVtVjJaVzVsZEM1amIyMHdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDMgp2RFl1SXoxblVkamNRN [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzJ2RFl1SXoxblVkamMKUTVBMUUzcThaU0pBNGN0aXFjSVVFem9neVFPT0x0RUpjTkhLc2JwaElVUWpIMjJZNjVwRG1ZUGtyZ3Vicm4xcAprYzNVajc1NnlHYi9rWnBaSzlDUy9pSmJxMi9sKytQd1ZlKy9wZ1ZuRGw0aFAvMTVha2hnNzNpTnQ4ZEtMRm4zCkxGUmFlbGlSa3o0ZmdNeTlaSTFhMlFQVmtFM0lPaWcvc2FwQ010bDlvVlhsYkJDOHQrYktTRTBMSHBma2paNXgKRFhnYktpYXZudWk0UzdtdFkweGhmM2U2NTR4T2x2bmpKY3E4cytQQmZwT3lyMHB4cC8vVFMxakloeG04Z3g0MQpNTXkyZTNVZHVuQVhzW [...]
kind: Secret
metadata:
  name: tls-cert
  namespace: client-apps
type: kubernetes.io/tls

---

apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURUekNDQWplZ0F3SUJBZ0lVVEg1alRmYzhEQTNVbFpScCtyUWtjMUM2VTlZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd056RUxNQWtHQTFVRUJoTUNSVk14RURBT0JnTlZCQW9NQjFwbGRtVnVaWFF4RmpBVUJnTlZCQU1NRFNvdQplbVYyWlc1bGRDNWpiMjB3SGhjTk1qQXdPVEkwTVRFMU9UQTBXaGNOTWpFd09USTBNVEUxT1RBMFdqQTNNUXN3CkNRWURWUVFHRXdKRlV6RVFNQTRHQTFVRUNnd0hXbVYyWlc1bGRERVdNQlFHQTFVRUF3d05LaTU2WlhabGJtVjAKTG1OdmJUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUw0NHhBSmZSbjVaOFg4KwpjTFJzQWxqVVBrbVVTQ [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQytPTVFDWDBaK1dmRi8KUG5DMGJBSlkxRDVKbEVnUTJmaXZWZXFyZUJtMUVqQTN0T0RjS0oxUUU5bUVlaGx0MVAzdEhycFVzbHdqdnVWaQpsUEZHdXFsakZndlhmK2I1VUVRVnZ1cmQraFppdHdhM0NoeDBXTmUvdWRmdEpROGxoL29kOGE0TS9zUUFYRHd5ClJBWXV3OXlnZXlOMERybjg0RzcvWTRsYnMxYk9VV2VaY21Fdi9hTS8xMWxDUHFRT244RTNYTGR3M0FjUGRncVQKUmdSa1laVkZuRis2V2FPU20vK2o1SFBVSDZNemtDZlpWekpMSWMzb24xMXQ1ejJWWjNFRUIxc09EajZQbFBWTQpNVVRHdFhpSkFlS3pRb [...]
kind: Secret
metadata:
  name: tls-cert
  namespace: admin-apps
type: kubernetes.io/tls
