tests/011_svc_funtional/login.yaml

apiVersion: v1
kind: ConfigMap
metadata:
  name: html-content-login
  namespace: admin-apps
data:
  index: "\n\tLog in and register!\n\n"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-login
  namespace: admin-apps
  labels:
    app: app-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-login
  template:
    metadata:
      labels:
        app: app-login
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: htmlpath
          mountPath: /usr/share/nginx/html
      volumes:
        - name: htmlpath
          configMap:
            name: html-content-login
---

apiVersion: v1
kind: Service
metadata:
  name: login-svc
  namespace: admin-apps
spec:
  type: ClusterIP
  selector:
    app: app-login
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 011-ingress-login
  namespace: admin-apps

spec:
  ingressClassName: zproxy-ingress

  tls:
  - secretName: tls-cert

  rules:
  - http:
      paths:
      - path: /login
        backend:
          serviceName: login-svc
          servicePort: 80
