tests/011_svc_funtional/web.yaml

apiVersion: v1
kind: ConfigMap
metadata:
  name: html-content
  namespace: www
data:
  index: "\n\tPRO WEBSITE!\n\n"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: www
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: htmlpath
          mountPath: /usr/share/nginx/html
      volumes:
        - name: htmlpath
          configMap:
            name: html-content
---

apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: www
  labels:
    app: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 011-ingress-web
  namespace: www
spec:
  ingressClassName: zproxy-ingress

  rules:
  - host: www.zevenet.com
    http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: 80
